--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-h5-audio-player": "^3.9.1",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.3",
     "screenfull": "^6.0.2"
