--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,16 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
+    "@reduxjs/toolkit": "^2.2.1",
     "jotai": "^2.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-h5-audio-player": "^3.9.1",
     "react-player": "^2.14.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
+    "redux": "^5.0.1",
     "screenfull": "^6.0.2"
   },
   "devDependencies": {
